--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,58 @@
 absl-py==0.9.0
 actionlib==1.12.0
-altgraph==0.17
 angles==1.9.11
+astor==0.8.1
+astunparse==1.6.3
+atari-py==0.2.6
+attrs==19.3.0
 audioread==2.1.8
-auto-py-to-exe==2.7.3
+autobahn==20.4.3
+Automat==20.2.0
+backcall==0.1.0
 beautifulsoup4==4.9.0
-bleach==1.5.0
 bondpy==1.8.3
-bottle==0.12.18
-bottle-websocket==0.2.9
+boto3==1.12.39
+botocore==1.15.39
+cachetools==4.0.0
 camera-calibration==1.13.0
 camera-calibration-parsers==1.11.13
 catkin==0.7.20
 certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
-click==7.1.2
+click==7.1.1
+cloudpickle==1.3.0
 colorama==0.4.3
+constantly==15.1.0
 controller-manager==0.15.1
 controller-manager-msgs==0.15.1
+cryptography==2.9.2
 cursor==1.3.4
 cv-bridge==1.13.0
 cycler==0.10.0
+Cython==0.29.14
+cython-bbox==0.1.3
 decorator==4.4.2
 deepspeech==0.7.1
 deepspeech-tflite==0.7.1
+defusedxml==0.6.0
 diagnostic-analysis==1.9.3
 diagnostic-common-diagnostics==1.9.3
 diagnostic-updater==1.9.3
-dlib==19.19.0
+docutils==0.15.2
 dynamic-reconfigure==1.6.0
-Eel==0.11.0
+entrypoints==0.3
+env==0.1.0
+et-xmlfile==1.0.1
+facebook-sdk==3.1.0
+flake8==3.7.9
+flake8-import-order==0.18.1
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-SocketIO==4.2.1
 future==0.18.2
+fuzzywuzzy==0.17.0
+gast==0.2.2
 gazebo-plugins==2.8.6
 gazebo-ros==2.8.6
 gencpp==0.6.2
@@ -43,68 +61,124 @@ genlisp==0.4.16
 genmsg==0.5.12
 gennodejs==2.0.1
 genpy==0.6.9
-gevent==20.5.0
-gevent-websocket==0.10.1
-greenlet==0.4.15
+google-auth==1.11.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.1.8
+grpcio==1.27.1
 gTTS==2.1.1
 gTTS-token==1.1.3
+gym==0.17.1
 h5py==2.10.0
 halo==0.0.29
-html5lib==0.9999999
-ibm-cloud-sdk-core==1.0.0
-ibm-watson==4.0.1
-idna==2.9
+hyperlink==19.0.0
+ibm-cloud-sdk-core==1.5.1
+ibm-watson==4.4.1
+idna==2.8
 image-geometry==1.13.0
+importlib-metadata==1.6.0
 imutils==0.5.3
+incremental==17.5.0
 interactive-markers==1.11.4
+ipykernel==5.2.0
+ipython==7.13.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
 itsdangerous==1.1.0
-Jinja2==2.11.2
+jdcal==1.4.1
+jedi==0.16.0
+Jinja2==2.11.1
+jmespath==0.9.5
 joblib==0.14.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.2
+jupyter-console==6.1.0
+jupyter-core==4.6.3
 kdl-parser-py==1.13.1
 Keras==2.2.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
-kiwisolver==1.2.0
+kiwisolver==1.1.0
+lap==0.4.0
 laser-geometry==1.6.4
 librosa==0.7.2
-llvmlite==0.32.0
+llvmlite==0.31.0
 log-symbols==0.0.14
-Markdown==3.2.1
+Markdown==3.2
 MarkupSafe==1.1.1
-matplotlib==3.2.1
+matplotlib==3.1.3
+mccabe==0.6.1
 message-filters==1.14.3
+mistune==0.8.4
+more-itertools==8.2.0
+motmetrics==1.2.0
 mpyg321==0.0.2
+nbconvert==5.6.1
+nbformat==5.0.5
 noisereduce==1.1.0
-numba==0.49.0
-numpy==1.18.2
-opencv-python==4.2.0.34
+notebook==6.0.3
+numba==0.48.0
+numpy==1.18.1
+oauthlib==3.1.0
+opencv-python==4.2.0.32
+openpyxl==3.0.3
+opt-einsum==3.1.0
+packaging==20.3
 pandas==1.0.3
-Pillow==7.1.1
-playsound==1.2.2
+pandocfilters==1.4.2
+parso==0.6.2
+PeakUtils==1.3.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==6.2.2
+pluggy==0.13.1
+progress==1.5
+prometheus-client==0.7.1
+prompt-toolkit==3.0.5
 protobuf==3.11.3
+ptyprocess==0.6.0
+py==1.8.1
+py-cpuinfo==5.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 PyAudio==0.2.11
+pycodestyle==2.5.0
 pycparser==2.20
+pydocumentdb==2.3.5
+pyflakes==2.1.1
 pygame==1.9.6
-PyInstaller==3.6
+pyglet==1.5.0
+Pygments==2.6.1
+PyHamcrest==2.0.2
 PyJWT==1.7.1
-pyparsing==2.4.7
+pyocr==0.7.2
+pyparsing==2.4.6
 PyQt5==5.14.2
 PyQt5-sip==12.7.2
 pyqtgraph==0.10.0
+pyrsistent==0.16.0
+pytesseract==0.3.3
+pytest==5.4.1
+pytest-benchmark==3.2.3
 python-dateutil==2.8.1
 python-dotenv==0.10.3
 python-engineio==3.12.1
+python-Levenshtein==0.12.0
 python-qt-binding==0.3.6
 python-socketio==4.5.1
-python-vlc==3.0.9113
 pyttsx3==2.87
 pytz==2019.3
-PyYAML==5.3.1
+PyYAML==5.3
+pyzmq==19.0.0
 qt-dotgraph==0.3.16
 qt-gui==0.3.16
 qt-gui-cpp==0.3.16
 qt-gui-py-common==0.3.16
-requests==2.23.0
+qtconsole==4.7.2
+QtPy==1.9.0
+rank-bm25==0.2
+requests==2.22.0
+requests-oauthlib==1.3.0
 resampy==0.2.2
 resource-retriever==1.12.5
 rosbag==1.14.3
@@ -159,36 +233,56 @@ rqt-tf-tree==0.6.0
 rqt-top==0.4.8
 rqt-topic==0.4.11
 rqt-web==0.4.8
+rsa==4.0
 rviz==1.13.7
+s3transfer==0.3.3
 scikit-learn==0.22.2.post1
 scipy==1.4.1
+Send2Trash==1.5.0
 sensor-msgs==1.12.7
 six==1.14.0
 smach==2.0.1
 smach-ros==2.0.1
 smclib==1.8.3
-SoundCard==0.3.3
 sounddevice==0.3.15
 SoundFile==0.10.3.post1
 soupsieve==2.0
+SpeechRecognition==3.8.1
 spinners==0.0.24
-tensorflow==1.5.0
-tensorflow-tensorboard==1.5.1
+tensorboard==1.14.0
+tensorboard-plugin-wit==1.6.0.post3
+tensorboardX==2.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
 termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
 tf==1.12.0
 tf-conversions==1.12.0
 tf2-geometry-msgs==0.6.5
 tf2-kdl==0.6.5
 tf2-py==0.6.5
 tf2-ros==0.6.5
-tkintertable==1.3.2
 topic-tools==1.14.3
+tornado==6.0.4
 tqdm==4.45.0
+traitlets==4.3.3
+Twisted==20.3.0
+txaio==20.4.1
 urdfdom-py==0.4.1
-urllib3==1.25.9
+urllib3==1.25.8
+wcwidth==0.1.9
+webencodings==0.5.1
 webrtcvad==2.0.10
 websocket-client==0.48.0
-Werkzeug==1.0.1
+Werkzeug==1.0.0
 wget==3.2
-whichcraft==0.6.1
+widgetsnbextension==3.5.1
+wrapt==1.11.2
+ws4py==0.5.1
 xacro==1.13.5
+xlrd==1.2.0
+xmltodict==0.12.0
+yacs==0.1.6
+zipp==3.1.0
+zope.interface==5.1.0
